# papergobbler

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: pre-commit.yml  release.yml  tag-release.yml
data/: papers.json
entities/: __init__.py  collection.py  paper.py
src/: api.py  db.py  entities.py  search.py  storage.py  ui.py
ui/: __init__.py  collection.py  collection_page.py  detail_view.py  helpers.py  list_view.py  paper_view.py  results.py  sidebar.py
