[project]
name = "papergobbler"
version = "1.0.0"
description = "PaperGobbler – Literature search interface"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "streamlit==1.54.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.5.0",
]

[dependency-groups]
dev = [
    "basedpyright==1.38.0",
    "pre-commit==4.5.1",
    "ruff==0.15.0",
]

[tool.ruff.lint]
select = ["E", "F", "TC004"]

[tool.basedpyright]
reportMissingTypeStubs = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportImportCycles = "none"
